# twentyoh22genie

./: .gitignore  README.md  generated_pain.xml  justfile  pyproject.toml
src/twentyoh22genie/: __init__.py  gen_xml.py
